# nutshell

./: .gitignore  readme.md
deploy_server/: README.md  pyproject.toml
deploy_server/core/: __main__.py  build_code.py  builder.py  cloud.py  redis.py  utils.py
frontend/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
frontend/prisma/: schema.prisma  seed.ts
frontend/prisma/migrations/20251015154349_init/: migration.sql
frontend/prisma/migrations/20251015162752_init/: migration.sql
frontend/prisma/migrations/20251016103252_init/: migration.sql
frontend/prisma/migrations/20251016163801_init/: migration.sql
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/[username]/: page.tsx
frontend/src/app/home/: page.tsx
frontend/src/app/login/: error.tsx  page.tsx
frontend/src/app/new/: page.tsx
frontend/src/app/signup/: error.tsx  not-found.tsx  page.tsx
frontend/src/components/: Cards.tsx  Contact.tsx  Footer.tsx  Hero.tsx  HomeLayout.tsx  Navbar.tsx  NewRepoCardClient.tsx  SessionWrapper.tsx  UserNamePageClient.tsx  theme-provider.tsx
frontend/src/components/items/: company-logo.tsx  contact-btn.tsx  (+13 more)
frontend/src/lib/: ServerAPI.ts  authOptions.ts  constants.ts  github.ts  parseUsername.ts  prisma.ts  redis.ts
frontend/src/types/: next-auth.d.ts
request_server/: Cargo.toml
request_server/src/: cloud.rs  core.rs  main.rs
upload_server/: package-lock.json  package.json
upload_server/src/: constansts.ts  index.ts  redis.ts
upload_server/src/controller/: index.ts  utils.ts
upload_server/src/router/: route.ts
(+15 files in other folders)
