[package]
name = "request_server"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.107.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
actix-web = "4"
actix-cors = "0.7.1"
env_logger = "0.11.8"
serde_json = "1.0.140"
log = "0.4.27"
mime_guess = "2.0.5"




